--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Lazrjet
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
+        <a class="nav-link selected" href="#">Blog <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Music</a>
@@ -29,7 +29,7 @@ title: Lazrjet
 </nav>
 
 
-<div class="container-fluid">
+<div class="container-fluid" id="main-container">
 
 	<div class="row">
 		<div class="col-sm-8" id="primary-column">
