--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title: Lazrjet
   </a>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link selected" href="#">Blog <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Blog <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Music</a>
@@ -54,8 +54,8 @@ title: Lazrjet
 
 		<div class="col-sm-4" id="sidebar">
 		
-			<img src="{{ site.baseurl }}/img/avatar@2x.png" height="360" width="354"/>
-
+			<!-- <img src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png" height="360" width="354"/> -->
+				<img src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png" height="274" width="310"/>
 		</div>
 	</div> <!-- /row -->
 
