Fix avatar image responsive behaviour and alignment

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@ title: Lazrjet
 
 
 		<div class="col-sm-4" id="sidebar">
-		
+		<div class="avatar-container">
 			<!-- <img src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png" height="360" width="354"/> -->
-				<img src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png" height="274" width="310"/>
+				<img class="avatar-image" src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png"/>
+		</div>
 		</div>
 	</div> <!-- /row -->
 
