Add dynamic header appearance on scroll

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: default
 title: Lazrjet
 ---
 
-<nav class="navbar navbar-toggleable-md fixed-top navbar-light">
+<nav class="navbar navbar-toggleable-md fixed-top navbar-light navbar-fixed-top">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="#">
-    <img src="/img/lazrjet-brand.jpg" width="162" height="79" alt="">
+    <img src="/img/lazrjet-brand@2x.png" width="162" height="79" alt="">
   </a>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
@@ -53,10 +53,12 @@ title: Lazrjet
 
 
 		<div class="col-sm-4" id="sidebar">
-		<div class="avatar-container">
-			<!-- <img src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png" height="360" width="354"/> -->
-				<img class="avatar-image" src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png"/>
-		</div>
+			<div class="about">
+				<div class="avatar-container">
+						<img class="avatar-image" src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png"/>
+				</div>
+			</div> <!-- /about -->
+
 		</div>
 	</div> <!-- /row -->
 
