Fix avatar image as css background

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ title: Lazrjet
 
 
 		<div class="col-sm-4" id="sidebar">
-				<div class="avatar-container">
+				<!-- <div class="avatar-container">
 						<img class="avatar-image" src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png"/>
-				</div>
+				</div> -->
 
 			<div class="about">
 
