Add responsive about copy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Lazrjet
 ---
 
-<nav class="navbar navbar-toggleable-md fixed-top navbar-light navbar-fixed-top">
+<nav class="navbar navbar-toggleable-sm fixed-top navbar-light navbar-fixed-top">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,15 +53,9 @@ title: Lazrjet
 
 
 		<div class="col-sm-4" id="sidebar">
-				<!-- <div class="avatar-container">
-						<img class="avatar-image" src="{{ site.baseurl }}/img/avatar-no-shadow@2x.png"/>
-				</div> -->
 
 			<div class="about">
-
-
-
-
+				<p>Marc Langsman (@lazrjet) is a designer who produces electronic music living near London</p>
 			</div> <!-- /about -->
 
 		</div>
