Add non breaking space to about copy orphan and add responsive horizontal padding

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Lazrjet
 		<div class="col-sm-4" id="sidebar">
 
 			<div class="about">
-				<p>Marc Langsman (@lazrjet) is a designer who produces electronic music living near London</p>
+				<p>Marc Langsman (@lazrjet) is a designer who produces electronic music living near&nbsp;London</p>
 			</div> <!-- /about -->
 
 		</div>
