--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@ title: Lazrjet
 				<p>Marc Langsman (@lazrjet) is a designer and electronic music producer living near&nbsp;London</p>
 			</div> <!-- /about -->
 
+			<div class="subscribe">
+				<h2>SUBSCRIBE</h2>
+				<p>Look good and sound great with fresh music, design and creative inspiration to jazz up your&nbsp;inbox.</p>
+				<form  class="justify-content-center d-flex flex-column">
+					<input type="text" name="name" />
+					<input type="text" name="email" />
+					<button type="button" class="btn btn-primary">SUBSCRIBE</button>
+				</form>
+			</div>
 		</div>
 	</div> <!-- /row -->
 
