Update subscribe form styling

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ title: Lazrjet
 			<div class="subscribe">
 				<h2>SUBSCRIBE</h2>
 				<p>Look good and sound great with fresh music, design and creative inspiration to jazz up your&nbsp;inbox.</p>
-				<form  class="justify-content-center d-flex flex-column">
-					<input type="text" name="name" />
-					<input type="text" name="email" />
+				<form  class="subscribe-form justify-content-center d-flex flex-column">
+					<input type="text" placeholder="Your Name" name="name" />
+					<input type="text" placeholder="Your Email" name="email" />
 					<button type="button" class="btn btn-primary">SUBSCRIBE</button>
 				</form>
 			</div>
