--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@ title: Lazrjet
 				<p>imperrum re est pra pore volum quas quodi asi dolorum ent, sim sequas estorer feribus renienis dolupta apiciunti tor autet ut haribus que opta dest eum simos digendestius et eat. El idit adi reribus molesequi cus, cumquiducia nisimin veritatempor aborestias mint asi velit quia volupti beatiusa natur ate ipit lab iusae. Nam fugiasit proribus et moditia qui in niscilia sit am is nis doluptat as doloraero ius aspero maximin imperum nos volupta dolore, ipsam venditate intium latur magni opti reribus cimosam usapid et auda escim quiam re veliquo in eos nihictu renditem faccullore con es doloreptate volendis il es et aceroviti acculle nistiuntur rest plam venest, suntemporest quam ut pla aut entionem qui cullatiur, conempo receate mporati oraepernam quam et moditaecabo. Et fugitas dundit etur? Quid qui aliquam ipist volorro te prem isti dolesti desed qui idesti offictiisti voluptate et verro dem deratis simagnis ped es repreici is corae con re volestibus.</p>
 
 			-->
+			<div class="article-divider" />
+			<hr />
+				<a href="/">PERMALINK</a>
 
+				
+			</div>
 			</article> <!-- /post -->
-	  
+	 
 		{% endfor %}
 
 		</div>
