--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Lazrjet
 					<h1>{{ post.title }}</h1>
 			  		<div class="date">{{ post.date | date: '%B %d, %Y' }}</div>
 					<!-- <img class="img-fluid" src="{{ site.baseurl }}/img/post-image-example.jpg" /> -->
-					<img class="img-fluid" src="/assets/{{ post.image }}" />
+					<img class="img-fluid" src="{{ site.baseurl }}/assets/{{ post.image }}" />
 					
 				</div>
 
