--- a/index.html
+++ b/index.html
@@ -34,24 +34,9 @@ title: Lazrjet
 	  
 
 
-		<div class="col-sm-4" id="sidebar">
-
-			<div class="about">
-				<p>Marc Langsman (@lazrjet) is a designer and electronic music producer living near&nbsp;London</p>
-			</div> <!-- /about -->
-
-			<div class="subscribe">
-				<h2>SUBSCRIBE</h2>
-				<p>Look good and sound great with fresh music, design and creative inspiration to jazz up your&nbsp;inbox.</p>
-				<form action="//lazrjet.us4.list-manage.com/subscribe/post?u=effb19f725024e2eacb7a4893&amp;id=bd71a68c6b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate subscribe-form justify-content-center d-flex flex-column" target="_blank" novalidate>
-					<input type="email" value="" placeholder="Your Email" name="EMAIL" class="required email" id="mce-EMAIL" />
-					<input style="display: none" type="text" name="b_effb19f725024e2eacb7a4893_bd71a68c6b" tabindex="-1" value="">
-					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary button" />
-				</form>
+		{% include sidebar.html %}
 
 
-			</div>
-		</div>
 	</div> <!-- /row -->
 
 </div>
