--- a/music.html
+++ b/music.html
@@ -8,51 +8,34 @@ title: Lazrjet | Music
 	<div class="row">
 		<div class="col-sm-8" id="primary-column">
 
+
+
+
 			 <h1 class="mb-5">Music</h1>
-			<div class="row">
-				<div class="col-sm-6">
-					<img class="img-fluid" src="{{ site.baseurl }}/img/album-art-example.jpg" />
-					<h2>Release name</h2>
-					<p> Lorem ipsum</p>
-				</div>
-				<div class="col-sm-6"><img class="img-fluid" src="{{ site.baseurl }}/img/album-art-example.jpg" />
-					<h2>Release name</h2>
-					<p> Lorem ipsum</p></div>
-				</div>
 
 			<div class="row">
-				<div class="col-sm-6"><img class="img-fluid" src="{{ site.baseurl }}/img/album-art-example.jpg" />
-					<h2>Release name</h2>
-					<p> Lorem ipsum</p>
+
+ 				{% for post in site.categories.music %}
+
+				<div class="col-sm-6">
+					<div class="release-detail">
+						<a href="{{ site.baseurl }}{{ post.url }}">
+							<img class="img-fluid" src="{{ site.baseurl }}/assets/album-art-example.jpg" />
+						</a>
+						<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
+						<!-- <p> Lorem ipsum</p> -->
+					</div>
 				</div>
-				<div class="col-sm-6"><img class="img-fluid" src="{{ site.baseurl }}/img/album-art-example.jpg" />
-					<h2>Release name</h2>
-					<p> Lorem ipsum</p>
-				</div>
+
+				{% endfor %}
+
 			</div>
 
 		</div>
 	  
 
+		{% include sidebar.html %}
 
-		<div class="col-sm-4" id="sidebar">
-
-			<div class="about">
-				<p>Marc Langsman (@lazrjet) is a designer and electronic music producer living near&nbsp;London</p>
-			</div> <!-- /about -->
-
-			<div class="subscribe">
-				<h2>SUBSCRIBE</h2>
-				<p>Look good and sound great with fresh music, design and creative inspiration to jazz up your&nbsp;inbox.</p>
-				<form action="//lazrjet.us4.list-manage.com/subscribe/post?u=effb19f725024e2eacb7a4893&amp;id=bd71a68c6b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate subscribe-form justify-content-center d-flex flex-column" target="_blank" novalidate>
-					<input type="email" value="" placeholder="Your Email" name="EMAIL" class="required email" id="mce-EMAIL" />
-					<input style="display: none" type="text" name="b_effb19f725024e2eacb7a4893_bd71a68c6b" tabindex="-1" value="">
-					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary button" />
-				</form>
-
-
-			</div>
-		</div>
 	</div> <!-- /row -->
 
 </div>
