Move blog post ot music category and fix images in music previews

--- a/music.html
+++ b/music.html
@@ -20,7 +20,7 @@ title: Lazrjet | Music
 				<div class="col-sm-6">
 					<div class="release-detail">
 						<a href="{{ site.baseurl }}{{ post.url }}">
-							<img class="img-fluid" src="{{ site.baseurl }}/assets/album-art-example.jpg" />
+							<img class="img-fluid" src="{{ site.baseurl }}/assets/{{ post.image }}" />
 						</a>
 						<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 						<!-- <p> Lorem ipsum</p> -->
