--- a/music.html
+++ b/music.html
@@ -11,7 +11,7 @@ title: Lazrjet | Music
 
 
 
-			 <h1 class="mb-5">Music</h1>
+			<!--  <h1 class="mb-5">Music</h1> -->
 
 			<div class="row">
 
@@ -20,7 +20,7 @@ title: Lazrjet | Music
 				<div class="col-sm-6">
 					<div class="release-detail">
 						<a href="{{ site.baseurl }}{{ post.url }}">
-							<img class="img-fluid" src="{{ site.baseurl }}/assets/{{ post.image }}" />
+							<img class="img-fluid desaturate" src="{{ site.baseurl }}/assets/{{ post.image }}" />
 						</a>
 						<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 						<!-- <p> Lorem ipsum</p> -->
