--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ title: Lazrjet
 					<!-- <img class="img-fluid" src="{{ site.baseurl }}/img/post-image-example.jpg" /> -->
 
 					{% if post.youtube %}
-
-					<iframe class="youtube" src="https://www.youtube.com/embed/{{ post.youtube }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-4by3 mb-4 mt-4">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ post.youtube }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					</div>
 
 					{% else %}
 
